Add image files

--- a/src/index.html
+++ b/src/index.html
@@ -74,12 +74,6 @@
             <a class="nav-link" href="https://github.com/snaomix">GitHub</a>
           </li>
         </ul>
-        <!-- <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-          <input type="radio" class="btn-check" name="btnradio" value="light" id="btnradio1" autocomplete="off" checked>
-          <label class="btn btn-outline-light" for="btnradio1">Light</label>
-          <input type="radio" class="btn-check" name="btnradio" value="dark" id="btnradio2" autocomplete="off">
-          <label class="btn btn-outline-light" for="btnradio2">Dark</label>
-        </div> -->
       </div>
     </div>
   </nav>
@@ -95,19 +89,22 @@
       <div class="carousel-item active">
         <div class="carousel-caption d-none d-md-block">
           <h4>Cristian Escobar</h4>
-          <p>Photo by Cristian Escobar on Unsplash</p>
+          <p>Photo by <a href="https://unsplash.com/@cristian1?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cristian Escobar</a> on <a href="https://unsplash.com/@cristian1?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          </p>
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-caption d-none d-md-block">
           <h4>Chris Lawton</h4>
-          <p>Photo by Chris Lawton on Unsplash</p>
+          <p>Photo by <a href="https://unsplash.com/@chrislawton?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Chris Lawton</a> on <a href="https://unsplash.com/@chrislawton?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          </p>
         </div>
       </div>
       <div class="carousel-item">
         <div class="carousel-caption d-none d-md-block">
           <h4>Aaron Burden</h4>
-          <p>Photo by Aaron Burden on Unsplash</p>
+          <p>Photo by <a href="https://unsplash.com/@aaronburden?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Aaron Burden</a> on <a href="https://unsplash.com/@aaronburden?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          </p>
         </div>
       </div>
     </div>
@@ -129,19 +126,19 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="https://source.unsplash.com/abkEAOjnY0s" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140">
+        <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140" type="image/webp">
         <h2>webpack</h2>
         <p>webpackは、オープンソースのJavaScriptモジュールバンドラー。主にJavaScript用に作成されているが、対応するローダーが含まれている場合は、HTML、CSS、画像などのフロントエンドアセットを変換できる。</p>
         <p><a class="btn btn-secondary" href="https://webpack.js.org/">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="https://source.unsplash.com/5IHz5WhosQE" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140">
+        <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140" type="image/webp">
         <h2>Bootstrap</h2>
         <p>BootstrapはウェブサイトやWebアプリケーションを作成するフロントエンドWebアプリケーションフレームワーク。タイポグラフィ、フォーム、ボタン、ナビゲーション、その他構成要素やJavaScript用拡張などが、HTMLおよびCSSベースのデザインテンプレートとして用意されている。</p>
         <p><a class="btn btn-secondary" href="https://getbootstrap.com/">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="https://source.unsplash.com/Qy-CBKUg_X8" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140">
+        <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140" type="image/webp">
         <h2>Sass</h2>
         <p>Sassは、ハンプトン・キャトリンが設計しネイサン・バイゼンバウムが開発したスタイルシート言語である。 後にSassファイルに用いられる単純なスクリプト言語である SassScript 用の拡張が加えられた。</p>
         <p><a class="btn btn-secondary" href="https://sass-lang.com/">View details &raquo;</a></p>
@@ -156,7 +153,7 @@
       </div>
       <div class="col-md-5">
         <div class='featurette-image'>
-          <img src="https://source.unsplash.com/abkEAOjnY0s" class="thumbnail" width="1080" height="720" alt="img1">
+          <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="thumbnail" width="1080" height="720" alt="img1" type="image/webp">
         </div>
       </div>
     </div>
@@ -168,7 +165,7 @@
       </div>
       <div class="col-md-5 order-md-1">
         <div class='featurette-image'>
-          <img src="https://source.unsplash.com/5IHz5WhosQE" class="thumbnail" width="1080" height="720" alt="img2">
+          <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="thumbnail" width="1080" height="720" alt="img2" type="image/webp">
         </div>
       </div>
     </div>
@@ -180,7 +177,7 @@
       </div>
       <div class="col-md-5">
         <div class='featurette-image'>
-          <img src="https://source.unsplash.com/Qy-CBKUg_X8" class="thumbnail" width="1080" height="720" alt="img3">
+          <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="thumbnail" width="1080" height="720" alt="img3" type="image/webp">
         </div>
       </div>
     </div>
