Add check with htmlhint Change html file

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" aria-label="navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://snaomix.github.io/">snaomix's site</a>
+      <a class="navbar-brand" href="https://snaomix.github.io/gh-pages/" title="snaomix's site">snaomix's site</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -68,10 +68,10 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://snaomix.github.io/">Home</a>
+            <a class="nav-link active" aria-current="page" href="https://snaomix.github.io/gh-pages/" title="Home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/snaomix">GitHub</a>
+            <a class="nav-link" href="https://github.com/snaomix" title="GitHub">GitHub</a>
           </li>
         </ul>
       </div>
@@ -87,23 +87,23 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption">
           <h4>Cristian Escobar</h4>
-          <p>Photo by <a href="https://unsplash.com/@cristian1?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cristian Escobar</a> on <a href="https://unsplash.com/@cristian1?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          <p>Photo by <a href="https://unsplash.com/@cristian1?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" title="">Cristian Escobar</a> on <a href="https://unsplash.com/@cristian1?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" title="">Unsplash</a>
           </p>
         </div>
       </div>
       <div class="carousel-item">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption">
           <h4>Chris Lawton</h4>
-          <p>Photo by <a href="https://unsplash.com/@chrislawton?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Chris Lawton</a> on <a href="https://unsplash.com/@chrislawton?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          <p>Photo by <a href="https://unsplash.com/@chrislawton?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" title="">Chris Lawton</a> on <a href="https://unsplash.com/@chrislawton?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" title="">Unsplash</a>
           </p>
         </div>
       </div>
       <div class="carousel-item">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption">
           <h4>Aaron Burden</h4>
-          <p>Photo by <a href="https://unsplash.com/@aaronburden?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Aaron Burden</a> on <a href="https://unsplash.com/@aaronburden?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          <p>Photo by <a href="https://unsplash.com/@aaronburden?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" title="">Aaron Burden</a> on <a href="https://unsplash.com/@aaronburden?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" title="">Unsplash</a>
           </p>
         </div>
       </div>
@@ -126,22 +126,22 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140" type="image/webp">
+        <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1920" height="1280" alt="Placeholder: 140x140" type="image/webp" title=""/>
         <h2>webpack</h2>
         <p>webpackは、オープンソースのJavaScriptモジュールバンドラー。主にJavaScript用に作成されているが、対応するローダーが含まれている場合は、HTML、CSS、画像などのフロントエンドアセットを変換できる。</p>
-        <p><a class="btn btn-secondary" href="https://webpack.js.org/">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://webpack.js.org/" title="">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140" type="image/webp">
+        <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1920" height="1280" alt="Placeholder: 140x140" type="image/webp" title=""/>
         <h2>Bootstrap</h2>
         <p>BootstrapはウェブサイトやWebアプリケーションを作成するフロントエンドWebアプリケーションフレームワーク。タイポグラフィ、フォーム、ボタン、ナビゲーション、その他構成要素やJavaScript用拡張などが、HTMLおよびCSSベースのデザインテンプレートとして用意されている。</p>
-        <p><a class="btn btn-secondary" href="https://getbootstrap.com/">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://getbootstrap.com/" title="">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1080" height="720" alt="Placeholder: 140x140" type="image/webp">
+        <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1920" height="1439" alt="Placeholder: 140x140" type="image/webp" title=""/>
         <h2>Sass</h2>
         <p>Sassは、ハンプトン・キャトリンが設計しネイサン・バイゼンバウムが開発したスタイルシート言語である。 後にSassファイルに用いられる単純なスクリプト言語である SassScript 用の拡張が加えられた。</p>
-        <p><a class="btn btn-secondary" href="https://sass-lang.com/">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://sass-lang.com/" title="">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
     <!-- START THE FEATURETTES -->
@@ -152,8 +152,8 @@
         <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
       </div>
       <div class="col-md-5">
-        <div class='featurette-image'>
-          <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="thumbnail" width="1080" height="720" alt="img1" type="image/webp">
+        <div class="featurette-image">
+          <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="thumbnail" width="1920" height="1280" alt="img1" type="image/webp" title=""/>
         </div>
       </div>
     </div>
@@ -164,8 +164,8 @@
         <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <div class='featurette-image'>
-          <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="thumbnail" width="1080" height="720" alt="img2" type="image/webp">
+        <div class="featurette-image">
+          <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="thumbnail" width="1920" height="1280" alt="img2" type="image/webp" title=""/>
         </div>
       </div>
     </div>
@@ -176,8 +176,8 @@
         <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
       </div>
       <div class="col-md-5">
-        <div class='featurette-image'>
-          <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="thumbnail" width="1080" height="720" alt="img3" type="image/webp">
+        <div class="featurette-image">
+          <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="thumbnail" width="1920" height="1439" alt="img3" type="image/webp" title=""/>
         </div>
       </div>
     </div>
