💄 Change image format from webp to avif, Fixed scss

--- a/src/index.html
+++ b/src/index.html
@@ -126,19 +126,19 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1920" height="1280" alt="Placeholder: 140x140" type="image/webp" title=""/>
+        <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=avif" class="bd-placeholder-img rounded-circle" width="1920" height="1280" alt="Placeholder: 140x140" type="image/avif" title=""/>
         <h2>webpack</h2>
         <p>webpackは、オープンソースのJavaScriptモジュールバンドラー。主にJavaScript用に作成されているが、対応するローダーが含まれている場合は、HTML、CSS、画像などのフロントエンドアセットを変換できる。</p>
         <p><a class="btn btn-secondary" href="https://webpack.js.org/" title="">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1920" height="1280" alt="Placeholder: 140x140" type="image/webp" title=""/>
+        <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=avif" class="bd-placeholder-img rounded-circle" width="1920" height="1280" alt="Placeholder: 140x140" type="image/avif" title=""/>
         <h2>Bootstrap</h2>
         <p>BootstrapはウェブサイトやWebアプリケーションを作成するフロントエンドWebアプリケーションフレームワーク。タイポグラフィ、フォーム、ボタン、ナビゲーション、その他構成要素やJavaScript用拡張などが、HTMLおよびCSSベースのデザインテンプレートとして用意されている。</p>
         <p><a class="btn btn-secondary" href="https://getbootstrap.com/" title="">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="bd-placeholder-img rounded-circle" width="1920" height="1439" alt="Placeholder: 140x140" type="image/webp" title=""/>
+        <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=avif" class="bd-placeholder-img rounded-circle" width="1920" height="1439" alt="Placeholder: 140x140" type="image/avif" title=""/>
         <h2>Sass</h2>
         <p>Sassは、ハンプトン・キャトリンが設計しネイサン・バイゼンバウムが開発したスタイルシート言語である。 後にSassファイルに用いられる単純なスクリプト言語である SassScript 用の拡張が加えられた。</p>
         <p><a class="btn btn-secondary" href="https://sass-lang.com/" title="">View details &raquo;</a></p>
@@ -153,7 +153,7 @@
       </div>
       <div class="col-md-5">
         <div class="featurette-image">
-          <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp" class="thumbnail" width="1920" height="1280" alt="img1" type="image/webp" title=""/>
+          <img src="images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=avif" class="thumbnail" width="1920" height="1280" alt="img1" type="image/avif" title=""/>
         </div>
       </div>
     </div>
@@ -165,7 +165,7 @@
       </div>
       <div class="col-md-5 order-md-1">
         <div class="featurette-image">
-          <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp" class="thumbnail" width="1920" height="1280" alt="img2" type="image/webp" title=""/>
+          <img src="images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=avif" class="thumbnail" width="1920" height="1280" alt="img2" type="image/avif" title=""/>
         </div>
       </div>
     </div>
@@ -177,7 +177,7 @@
       </div>
       <div class="col-md-5">
         <div class="featurette-image">
-          <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp" class="thumbnail" width="1920" height="1439" alt="img3" type="image/webp" title=""/>
+          <img src="images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=avif" class="thumbnail" width="1920" height="1439" alt="img3" type="image/avif" title=""/>
         </div>
       </div>
     </div>
